fixed overflow, but truncation isn't nice

--- a/styles/punchcard-stack.less
+++ b/styles/punchcard-stack.less
@@ -1,10 +1,13 @@
 .punchcard-stack .business-name {
   position: absolute;
   top: 39px;
-  width: 100%;
+  left: 187px;
+  width: 274px;
+  height: 40px;
   text-align: center;
   font-size: 24px;
   font-weight: normal;
+  overflow:hidden;
 }
 
 .punchcard-stack .num-rewards-badge {
@@ -13,8 +16,7 @@
   top: 85px;
 }
 
-.punchcard-stack .banner-elite,
-.punchcard-stack .banner-regular {
+.punchcard-stack .banner {
   position: absolute;
   top: 41px;
   left: 43px;
